fixed the margins on tablet and desktop

--- a/src/components/Item/Item.scss
+++ b/src/components/Item/Item.scss
@@ -40,11 +40,12 @@
 
         @include tablet {
             width: 9rem;
-            margin: 0 .3rem 0 0;
+            margin: 0 .55rem 0 0;
+            // border: 1px solid green;
         }
 
         @include desktop {
-            margin: 0 4rem 0 0;
+            margin: 0 4.3rem 0 0;
         }
 
             &--icon {
@@ -57,13 +58,14 @@
     &__stock-tablet {
         @include tablet {
             width: 5.7rem; 
-            margin: 0 .6rem 0 0;
+            margin: 0 1rem 0 0;
             display: flex;
             align-items: center;
+            // border: 1px solid blue;
         }
 
         @include desktop {
-            margin: 0 4.2rem 0 0;
+            margin: 0 4.65rem 0 0;
         }
     }
 
@@ -100,13 +102,14 @@
 
                 @include tablet {
                     width: 6.75rem;
-                    margin: 0 .3rem 0 0;
+                    margin: 0 .55rem 0 0;
                     display: flex;
                     align-items: center;
+                    // border: 1px solid red;
                 }
 
                 @include desktop {
-                    margin: 0 4.2rem 0 0;
+                    margin: 0 4.3rem 0 0;
                 }
             }
 
@@ -135,26 +138,28 @@
 
                 @include tablet {
                     width: 4rem;
-                    margin: 0 1rem 0 0;
+                    margin: 0 1.2rem 0 0;
                     display: flex;
-                    align-items: center;                    
+                    align-items: center;
+                    // border: 1px solid green;                    
                 }
 
                 @include desktop {
-                    margin: 0 4.8rem 0 0;
+                    margin: 0 5rem 0 0;
                 }
             }
 
             &--warehouse {
                 @include tablet {
                     width: 6rem;
-                    margin: 0 .8rem 0 0;
+                    margin: 0 1rem 0 0;
                     display: flex;
                     align-items: center;
+                    // border: 1px solid orange; 
                 }
 
                 @include desktop {
-                    margin: 0 4.5rem 0 0;
+                    margin: 0 4.7rem 0 0;
                 }
             }
     }
