--- a/src/styles/partials/_deskntab-fonts.scss
+++ b/src/styles/partials/_deskntab-fonts.scss
@@ -22,29 +22,25 @@ $deskntab-line-p3: 1.125rem;
 
 
 @mixin deskntab-pg-header {
-    font-family: 'TitilliumWeb';
-    font-size: 1.75rem;
+    font-size: $deskntab-pg-header;
     font-weight: 600;
     color: $primary-txt-color;
     line-height: $deskntab-line-h1;
 }
 
 @mixin deskntab-body-med {
-    font-family: 'TitilliumWeb';
     font-size: $deskntab-body-med;
     color: $placeholder-color;
     line-height: $deskntab-line-p2;
 }
 
 @mixin deskntab-links-buttons-txt {
-    font-family: 'TitilliumWeb';
     font-weight: 600;
     font-size: $deskntab-links;
     line-height: $deskntab-line-h3;
 }
 
 @mixin deskntab-field-txt {
-    font-family: 'TitilliumWeb';
     font-weight: 600;
     font-size: $deskntab-tbl-header;
     text-transform: uppercase;
@@ -53,7 +49,6 @@ $deskntab-line-p3: 1.125rem;
 }
 
 @mixin deskntab-record-link {
-    font-family: 'TitilliumWeb';
     font-weight: 600;
     font-size: $deskntab-links;
     line-height: $deskntab-line-h3;
@@ -61,14 +56,12 @@ $deskntab-line-p3: 1.125rem;
 }
 
 @mixin deskntab-record-txt {
-    font-family: 'TitilliumWeb';
     font-size: $deskntab-body-med;
     line-height: $deskntab-line-p2;
     color: $record-txt-color;
 }
 
 @mixin deskntab-record-in-stock {
-    font-family: 'TitilliumWeb';
     font-size: $deskntab-body-sm;
     font-weight: 600;
     line-height: $deskntab-line-p3;
